--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -91,8 +91,34 @@ nav{
 
 /* MAIN CONTENT STYLES */
 
+#image-container{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: -200px;
+  left: 0;
+  z-index: -1;
+}
+
+#background{
+  width: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+#image-container::before{
+  content: '';
+  position: absolute;
+  top: 200px;
+  left: 0;
+  background-image: linear-gradient(to top,#7d000073 , #eedf3654);
+  width: 100%;
+  height: 100%;
+}
+
 .main-content{
   height: 100vh;
   margin-left: 220px;
   padding: 20px;
+  margin-bottom: 200px;
 }
