--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -155,6 +155,7 @@ nav{
   left: 0;
   z-index: -1;
   overflow: hidden;
+  pointer-events: none;
 }
 
 #background{
@@ -162,6 +163,7 @@ nav{
   object-fit: cover;
   height: 100%;
   display: block;
+  pointer-events: none;
 }
 
 #image-container::before{
@@ -173,6 +175,7 @@ nav{
   width: 100%;
   height: 100%;
   z-index: 1;
+  pointer-events: none;
 }
 
 .main-content{
@@ -180,7 +183,6 @@ nav{
   margin-left: 220px;
   padding: var(--bu-spacing-lg);
   position: relative;
-  z-index: 10;
 }
 
 .main-content h2 {
